<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
        <item
            app:showAsAction="ifRoom|collapseActionView"
            android:icon="@android:drawable/ic_menu_search"
            android:id="@+id/menu_item_search"
            app:actionViewClass="android.support.v7.widget.SearchView"
            android:orderInCategory="1"
            android:title="@string/search_hint" />
        <item
            android:id="@+id/action_delete"
            android:title="@string/action_delete"
            android:icon="@drawable/ic_delete_black_24dp"
            android:orderInCategory="2"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_update"
            android:title="@string/action_update"
            android:icon="@drawable/ic_autorenew_black_24dp"
            android:orderInCategory="3"
            app:showAsAction="ifRoom" />
</menu>